# nanogui-static-cmake

./: .gitmodules  CMakeLists.txt  Makefile  main.cpp  nanogui_resources.h
Release/: FOO-0.1.out
